human_written_tests/WebAssembly/processed_control_flow_validation/test_return_20.wast
(assert_invalid
  (module (func $type-value-num-vs-num (result f64) (return (i64.const 1))))
  "type mismatch"
)